deployment/redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
      - port: 6379
        targetPort: redis-server
  selector:
    app: redis
